--- a/experiment/toffoli_flip.ipynb
+++ b/experiment/toffoli_flip.ipynb
@@ -2,169 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'OPENQASM 2.0;\\ninclude \"qelib1.inc\";\\nqreg q[7];\\nh q[6];\\ncx q[5],q[6];\\nrz(pi*-0.250000) q[6];\\ncx q[3],q[6];\\nrz(pi*0.250000) q[6];\\ncx q[5],q[6];\\nrz(pi*-0.250000) q[6];\\ncx q[3],q[6];\\ncx q[3],q[5];\\nrz(pi*0.250000) q[6];\\nrz(pi*-0.250000) q[5];\\ncx q[3],q[5];\\nrz(pi*0.250000) q[3];\\nrz(pi*0.250000) q[5];\\nh q[5];\\ncx q[4],q[5];\\nrz(pi*-0.250000) q[5];\\ncx q[2],q[5];\\nrz(pi*0.250000) q[5];\\ncx q[4],q[5];\\nrz(pi*-0.250000) q[5];\\ncx q[2],q[5];\\ncx q[2],q[4];\\nrz(pi*0.250000) q[5];\\nrz(pi*-0.250000) q[4];\\ncx q[2],q[4];\\nrz(pi*0.250000) q[2];\\nrz(pi*0.250000) q[4];\\nh q[4];\\ncx q[1],q[4];\\nrz(pi*-0.250000) q[4];\\ncx q[0],q[4];\\nrz(pi*0.250000) q[4];\\ncx q[1],q[4];\\nrz(pi*-0.250000) q[4];\\ncx q[0],q[4];\\ncx q[0],q[1];\\nrz(pi*0.250000) q[4];\\nrz(pi*-0.250000) q[1];\\nh q[4];\\ncx q[0],q[1];\\ncx q[4],q[5];\\nrz(pi*0.250000) q[0];\\nrz(pi*0.250000) q[1];\\nrz(pi*0.250000) q[5];\\ncx q[2],q[5];\\nrz(pi*-0.250000) q[5];\\ncx q[4],q[5];\\nrz(pi*0.250000) q[5];\\ncx q[2],q[5];\\ncx q[2],q[4];\\nrz(pi*-0.250000) q[5];\\nrz(pi*0.250000) q[4];\\nh q[5];\\ncx q[2],q[4];\\ncx q[5],q[6];\\nrz(pi*-0.250000) q[2];\\nrz(pi*-0.250000) q[4];\\nrz(pi*0.250000) q[6];\\ncx q[3],q[6];\\nrz(pi*-0.250000) q[6];\\ncx q[5],q[6];\\nrz(pi*0.250000) q[6];\\ncx q[3],q[6];\\ncx q[3],q[5];\\nrz(pi*-0.250000) q[6];\\nrz(pi*0.250000) q[5];\\nh q[6];\\ncx q[3],q[5];\\nrz(pi*-0.250000) q[3];\\nrz(pi*-0.250000) q[5];\\nh q[5];\\ncx q[4],q[5];\\nrz(pi*-0.250000) q[5];\\ncx q[2],q[5];\\nrz(pi*0.250000) q[5];\\ncx q[4],q[5];\\nrz(pi*-0.250000) q[5];\\ncx q[2],q[5];\\ncx q[2],q[4];\\nrz(pi*0.250000) q[5];\\nrz(pi*-0.250000) q[4];\\ncx q[2],q[4];\\nrz(pi*0.250000) q[2];\\nrz(pi*0.250000) q[4];\\nh q[4];\\ncx q[1],q[4];\\nrz(pi*0.250000) q[4];\\ncx q[0],q[4];\\nrz(pi*-0.250000) q[4];\\ncx q[1],q[4];\\nrz(pi*0.250000) q[4];\\ncx q[0],q[4];\\ncx q[0],q[1];\\nrz(pi*-0.250000) q[4];\\nrz(pi*0.250000) q[1];\\nh q[4];\\ncx q[0],q[1];\\ncx q[4],q[5];\\nrz(pi*-0.250000) q[0];\\nrz(pi*-0.250000) q[1];\\nrz(pi*0.250000) q[5];\\ncx q[2],q[5];\\nrz(pi*-0.250000) q[5];\\ncx q[4],q[5];\\nrz(pi*0.250000) q[5];\\ncx q[2],q[5];\\ncx q[2],q[4];\\nrz(pi*-0.250000) q[5];\\nrz(pi*0.250000) q[4];\\nh q[5];\\ncx q[2],q[4];\\nrz(pi*-0.250000) q[2];\\nrz(pi*-0.250000) q[4];\\n'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "qasm_str = None\n",
-    "with open('t_tdg_h_cx_toffoli_flip_dataset/barenco_tof_4.qasm.toffoli_flip', 'r') as f:\n",
-    "    qasm_str = f.read()\n",
-    "qasm_str"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['OPENQASM 2.0;',\n",
-       " 'include \"qelib1.inc\";',\n",
-       " 'qreg q[7];',\n",
-       " 'h q[6];',\n",
-       " 'cx q[5],q[6];',\n",
-       " 'rz(pi*-0.250000) q[6];',\n",
-       " 'cx q[3],q[6];',\n",
-       " 'rz(pi*0.250000) q[6];',\n",
-       " 'cx q[5],q[6];',\n",
-       " 'rz(pi*-0.250000) q[6];',\n",
-       " 'cx q[3],q[6];',\n",
-       " 'cx q[3],q[5];',\n",
-       " 'rz(pi*0.250000) q[6];',\n",
-       " 'rz(pi*-0.250000) q[5];',\n",
-       " 'cx q[3],q[5];',\n",
-       " 'rz(pi*0.250000) q[3];',\n",
-       " 'rz(pi*0.250000) q[5];',\n",
-       " 'h q[5];',\n",
-       " 'cx q[4],q[5];',\n",
-       " 'rz(pi*-0.250000) q[5];',\n",
-       " 'cx q[2],q[5];',\n",
-       " 'rz(pi*0.250000) q[5];',\n",
-       " 'cx q[4],q[5];',\n",
-       " 'rz(pi*-0.250000) q[5];',\n",
-       " 'cx q[2],q[5];',\n",
-       " 'cx q[2],q[4];',\n",
-       " 'rz(pi*0.250000) q[5];',\n",
-       " 'rz(pi*-0.250000) q[4];',\n",
-       " 'cx q[2],q[4];',\n",
-       " 'rz(pi*0.250000) q[2];',\n",
-       " 'rz(pi*0.250000) q[4];',\n",
-       " 'h q[4];',\n",
-       " 'cx q[1],q[4];',\n",
-       " 'rz(pi*-0.250000) q[4];',\n",
-       " 'cx q[0],q[4];',\n",
-       " 'rz(pi*0.250000) q[4];',\n",
-       " 'cx q[1],q[4];',\n",
-       " 'rz(pi*-0.250000) q[4];',\n",
-       " 'cx q[0],q[4];',\n",
-       " 'cx q[0],q[1];',\n",
-       " 'rz(pi*0.250000) q[4];',\n",
-       " 'rz(pi*-0.250000) q[1];',\n",
-       " 'h q[4];',\n",
-       " 'cx q[0],q[1];',\n",
-       " 'cx q[4],q[5];',\n",
-       " 'rz(pi*0.250000) q[0];',\n",
-       " 'rz(pi*0.250000) q[1];',\n",
-       " 'rz(pi*0.250000) q[5];',\n",
-       " 'cx q[2],q[5];',\n",
-       " 'rz(pi*-0.250000) q[5];',\n",
-       " 'cx q[4],q[5];',\n",
-       " 'rz(pi*0.250000) q[5];',\n",
-       " 'cx q[2],q[5];',\n",
-       " 'cx q[2],q[4];',\n",
-       " 'rz(pi*-0.250000) q[5];',\n",
-       " 'rz(pi*0.250000) q[4];',\n",
-       " 'h q[5];',\n",
-       " 'cx q[2],q[4];',\n",
-       " 'cx q[5],q[6];',\n",
-       " 'rz(pi*-0.250000) q[2];',\n",
-       " 'rz(pi*-0.250000) q[4];',\n",
-       " 'rz(pi*0.250000) q[6];',\n",
-       " 'cx q[3],q[6];',\n",
-       " 'rz(pi*-0.250000) q[6];',\n",
-       " 'cx q[5],q[6];',\n",
-       " 'rz(pi*0.250000) q[6];',\n",
-       " 'cx q[3],q[6];',\n",
-       " 'cx q[3],q[5];',\n",
-       " 'rz(pi*-0.250000) q[6];',\n",
-       " 'rz(pi*0.250000) q[5];',\n",
-       " 'h q[6];',\n",
-       " 'cx q[3],q[5];',\n",
-       " 'rz(pi*-0.250000) q[3];',\n",
-       " 'rz(pi*-0.250000) q[5];',\n",
-       " 'h q[5];',\n",
-       " 'cx q[4],q[5];',\n",
-       " 'rz(pi*-0.250000) q[5];',\n",
-       " 'cx q[2],q[5];',\n",
-       " 'rz(pi*0.250000) q[5];',\n",
-       " 'cx q[4],q[5];',\n",
-       " 'rz(pi*-0.250000) q[5];',\n",
-       " 'cx q[2],q[5];',\n",
-       " 'cx q[2],q[4];',\n",
-       " 'rz(pi*0.250000) q[5];',\n",
-       " 'rz(pi*-0.250000) q[4];',\n",
-       " 'cx q[2],q[4];',\n",
-       " 'rz(pi*0.250000) q[2];',\n",
-       " 'rz(pi*0.250000) q[4];',\n",
-       " 'h q[4];',\n",
-       " 'cx q[1],q[4];',\n",
-       " 'rz(pi*0.250000) q[4];',\n",
-       " 'cx q[0],q[4];',\n",
-       " 'rz(pi*-0.250000) q[4];',\n",
-       " 'cx q[1],q[4];',\n",
-       " 'rz(pi*0.250000) q[4];',\n",
-       " 'cx q[0],q[4];',\n",
-       " 'cx q[0],q[1];',\n",
-       " 'rz(pi*-0.250000) q[4];',\n",
-       " 'rz(pi*0.250000) q[1];',\n",
-       " 'h q[4];',\n",
-       " 'cx q[0],q[1];',\n",
-       " 'cx q[4],q[5];',\n",
-       " 'rz(pi*-0.250000) q[0];',\n",
-       " 'rz(pi*-0.250000) q[1];',\n",
-       " 'rz(pi*0.250000) q[5];',\n",
-       " 'cx q[2],q[5];',\n",
-       " 'rz(pi*-0.250000) q[5];',\n",
-       " 'cx q[4],q[5];',\n",
-       " 'rz(pi*0.250000) q[5];',\n",
-       " 'cx q[2],q[5];',\n",
-       " 'cx q[2],q[4];',\n",
-       " 'rz(pi*-0.250000) q[5];',\n",
-       " 'rz(pi*0.250000) q[4];',\n",
-       " 'h q[5];',\n",
-       " 'cx q[2],q[4];',\n",
-       " 'rz(pi*-0.250000) q[2];',\n",
-       " 'rz(pi*-0.250000) q[4];',\n",
-       " '']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qasm_strs = qasm_str.split('\\n')\n",
-    "for s in qasm_strs:\n",
-    "    s = s.replace('rz(pi*-0.250000)', 'tdg')\n",
-    "    s = s.replace('rz(pi*0.250000)', 't')\n",
-    "    s += '\\n'\n",
-    "with open('t_tdg_h_cx_toffoli_flip_dataset/barenco_tof_4_after_toffoli_flip.qasm', 'w') as f:\n",
-    "    f.writelines(qasm_strs)\n",
-    "qasm_strs "
+    "import os\n",
+    "from os.path import join, isfile\n",
+    "\n",
+    "qasm_path = os.getcwd() + '/t_tdg_h_cx_toffoli_flip_dataset/'\n",
+    "qasm_fns = [\n",
+    "    fn for fn in os.listdir(qasm_path)\n",
+    "    if isfile(join(qasm_path, fn)) and fn[-12:] == 'toffoli_flip'\n",
+    "]\n",
+    "\n",
+    "for fn in qasm_fns:\n",
+    "    full_fn = qasm_path + fn\n",
+    "    with open(full_fn, 'r') as fin:\n",
+    "        qasm_str = fin.read()\n",
+    "        qasm_strs = qasm_str.split('\\n')\n",
+    "        with open(f'{full_fn[:-18]}_after_toffoli_flip.qasm', 'w') as fout:\n",
+    "            for s in qasm_strs:\n",
+    "                if s == '\\n' or s == '':\n",
+    "                    continue\n",
+    "                s = s.replace('rz(pi*-0.250000)', 'tdg')\n",
+    "                s = s.replace('rz(pi*0.250000)', 't')\n",
+    "                s += '\\n'\n",
+    "                fout.write(s)"
    ]
   }
  ],
@@ -187,7 +50,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
