--- a/experiment/ppo-new/test.ipynb
+++ b/experiment/ppo-new/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +99,169 @@
     "net1.weight.data = net1.weight.data + 100\n",
     "\n",
     "ic(net3.weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass, fields\n",
+    "from typing import Callable, Iterable, Iterator, Optional, Tuple, List, Any, Sequence\n",
+    "\n",
+    "@dataclass\n",
+    "class Test:\n",
+    "    a: Sequence[int]\n",
+    "    b: Sequence[float]\n",
+    "    \n",
+    "    def pop(self, size) -> Test:\n",
+    "        \n",
+    "        ret = Test(self.a[:size], self.b[:size])\n",
+    "        \n",
+    "        for field in fields(self):\n",
+    "            setattr(self, field.name, getattr(self, field.name)[size:])\n",
+    "    \n",
+    "        return ret\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.a)\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        ret = Test(None, None)\n",
+    "        for field in fields(self):\n",
+    "            setattr(ret, field.name, getattr(self, field.name) + getattr(other, field.name))\n",
+    "        return ret\n",
+    "\n",
+    "    def __iadd__(self, other):\n",
+    "        for field in fields(self):\n",
+    "            setattr(self, field.name, getattr(self, field.name).__iadd__(getattr(other, field.name)))\n",
+    "        return self\n",
+    "\n",
+    "    def __iter__(self) -> Iterator:\n",
+    "        return iter([\n",
+    "            getattr(self, field.name)\n",
+    "            for field in fields(self)\n",
+    "        ])\n",
+    "        \n",
+    "\n",
+    "class TestIterator:\n",
+    "\n",
+    "    def __init__(self, src, size = 1):\n",
+    "        self.src = src\n",
+    "        self.size = size\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        ret = self.src.pop(self.size)\n",
+    "        if len(ret) > 0:\n",
+    "            return ret\n",
+    "        else:\n",
+    "            raise StopIteration\n",
+    "\n",
+    "t1 = Test(\n",
+    "    a=[i for i in range(10)],\n",
+    "    b=[i / 10 for i in range(10)],\n",
+    ")\n",
+    "t2 = Test(\n",
+    "    a=[i for i in range(10, 20)],\n",
+    "    b=[i / 10 for i in range(10, 20)],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Test(a=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19], b=[0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1 += t2\n",
+    "t1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Test(a=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19], b=[0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Test(a=[0, 1, 2, 3, 4], b=[0.5, 1.5, 2.5, 3.5, 4.5])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_test = [ Test(i, i + 0.5) for i in range(5) ]\n",
+    "a = list(map(list, zip(*list_test)))\n",
+    "t = Test(*list(map(list, zip(*list_test))))\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5]\n",
+      "[2, 3, 4, 5]\n",
+      "mean: 2.5\n",
+      "{0: '0', 1: '1', 2: '2', 3: '3', 4: '4', 5: '5', 6: '6', 7: '7', 8: '8', 9: '9'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [0,1,2,3,4,5]\n",
+    "b = a\n",
+    "b = b[2:]\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(f'mean: {torch.Tensor(a).mean().item()}')\n",
+    "b[slice(4,5)]\n",
+    "d1 = {i: str(i) for i in range(5)}\n",
+    "d2 = {i: str(i) for i in range(5, 10)}\n",
+    "print({**d1, **d2})"
    ]
   }
  ],
