--- a/experiment/ppo-new/test.ipynb
+++ b/experiment/ppo-new/test.ipynb
@@ -23,86 +23,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ic| net1.weight.device: device(type='cuda', index=2)\n",
-      "ic| net2.weight.device: device(type='cuda', index=2)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "device(type='cuda', index=2)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "net1 = nn.Linear(3,5).to('cuda:2')\n",
-    "ic(net1.weight.device)\n",
-    "net2 = copy.deepcopy(net1)\n",
-    "ic(net2.weight.device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ic| net3.weight: Parameter containing:\n",
-      "                 tensor([[-0.5693,  0.4885, -0.2683],\n",
-      "                         [-0.0751,  0.0521,  0.1915],\n",
-      "                         [-0.2107, -0.3562,  0.1439],\n",
-      "                         [ 0.4568, -0.3257,  0.2844],\n",
-      "                         [ 0.4334, -0.1284,  0.5170]], device='cuda:2', requires_grad=True)\n",
-      "ic| net3.weight: Parameter containing:\n",
-      "                 tensor([[ 99.4307, 100.4885,  99.7317],\n",
-      "                         [ 99.9249, 100.0521, 100.1915],\n",
-      "                         [ 99.7893,  99.6438, 100.1439],\n",
-      "                         [100.4568,  99.6743, 100.2844],\n",
-      "                         [100.4334,  99.8717, 100.5170]], device='cuda:2', requires_grad=True)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Parameter containing:\n",
-       "tensor([[ 99.4307, 100.4885,  99.7317],\n",
-       "        [ 99.9249, 100.0521, 100.1915],\n",
-       "        [ 99.7893,  99.6438, 100.1439],\n",
-       "        [100.4568,  99.6743, 100.2844],\n",
-       "        [100.4334,  99.8717, 100.5170]], device='cuda:2', requires_grad=True)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "net3 = net1\n",
-    "\n",
-    "ic(net3.weight)\n",
-    "\n",
-    "net1.weight.data = net1.weight.data + 100\n",
-    "\n",
-    "ic(net3.weight)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [],
@@ -263,6 +183,172 @@
     "d2 = {i: str(i) for i in range(5, 10)}\n",
     "print({**d1, **d2})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m1 = torch.load('outputs/2022-06-21/13-20-32/0.pt')\n",
+    "m3 = torch.load('outputs/2022-06-21/14-18-27/11.pt')\n",
+    "m2 = torch.load('outputs/2022-06-21/14-18-27/iter_2.pt')['model_state_dict']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "odict_keys(['graph_embedding.embedding.weight', 'graph_embedding.conv_0.linear2.weight', 'graph_embedding.conv_0.linear2.bias', 'graph_embedding.conv_0.linear1.weight', 'graph_embedding.convs.0.linear2.weight', 'graph_embedding.convs.0.linear2.bias', 'graph_embedding.convs.0.linear1.weight', 'graph_embedding.convs.1.linear2.weight', 'graph_embedding.convs.1.linear2.bias', 'graph_embedding.convs.1.linear1.weight', 'graph_embedding.convs.2.linear2.weight', 'graph_embedding.convs.2.linear2.bias', 'graph_embedding.convs.2.linear1.weight', 'graph_embedding.convs.3.linear2.weight', 'graph_embedding.convs.3.linear2.bias', 'graph_embedding.convs.3.linear1.weight', 'graph_embedding.convs.4.linear2.weight', 'graph_embedding.convs.4.linear2.bias', 'graph_embedding.convs.4.linear1.weight', 'actor.0.weight', 'actor.0.bias', 'actor.2.weight', 'actor.2.bias', 'critic.0.weight', 'critic.0.bias', 'critic.2.weight', 'critic.2.bias'])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True],\n",
+       "        [True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True, True, True, True, True, True, True, True,\n",
+       "         True, True, True, True, True]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "key = 'graph_embedding.embedding.weight'\n",
+    "m3[key] == m2[key]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 10, 5])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.rand(10, 5)\n",
+    "torch.stack([x, x]).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
