enable data collection for agent itself, add omp_num_threads limit config

--- a/experiment/dqn/test.ipynb
+++ b/experiment/dqn/test.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jinjun/miniconda3/envs/quartz/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import quartz\n",
     "import torch\n",
@@ -57,14 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.75787 ms\n"
+      "3.902898 ms\n",
+      "-3680862461118220112\n"
      ]
     }
    ],
@@ -74,19 +84,21 @@
     "dag = parser.load_qasm_str(qasm_str)\n",
     "graph = quartz.PyGraph(context=quartz_context, dag=dag)\n",
     "e_time = time.time_ns()\n",
-    "print(f'{(e_time - s_time) / 1e6} ms')"
+    "print(f'{(e_time - s_time) / 1e6} ms')\n",
+    "print(hash(graph))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.339538 ms\n"
+      "1.175393 ms\n",
+      "-3680862461118220112\n"
      ]
     }
    ],
@@ -94,7 +106,8 @@
     "s_time = time.time_ns()\n",
     "graph2 = quartz.PyGraph.from_qasm_str(context=quartz_context, qasm_str=qasm_str)\n",
     "e_time = time.time_ns()\n",
-    "print(f'{(e_time - s_time) / 1e6} ms')"
+    "print(f'{(e_time - s_time) / 1e6} ms')\n",
+    "print(hash(graph2))"
    ]
   },
   {
